Jingsaw-jetzt wirklich, ObjectArray kann an Einstellungen gegeben werden